# ADream

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
Controls/: ADBorderContainer.cpp  ADBorderContainer.h  ADButton.cpp  ADButton.h  ADCanva.cpp  ADCanva.h  ADContainer.cpp  ADContainer.h  ADLogHandler.cpp  ADLogHandler.h  ADWidgetMove.cpp  ADWidgetMove.h  CMakeLists.txt
Controls/Effect/: BaseEffect.h  ExpandtoCollapse.cpp  ExpandtoCollapse.h  Fly.cpp  Fly.h
Controls/FrameLessHelper/: ADBorder.cpp  ADBorderContainer.cpp  ADBorderContainer.h  MyBorder.cpp  MyBorderContainer.cpp  MyBorderContainer.h  WidgetData.cpp  WidgetData.h  frameless_helper.h
Controls/Helper/Qss/: QssHelper.cpp  QssHelper.h
Controls/Mouse/: ADBorderContainer.cpp  ADWidgetMove.cpp  ADWidgetMove.h
Moudles/: BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  Config.cpp  Config.h  MainWindow.cpp  MainWindow.h  Setting.h  TitleBar.cpp  TitleBar.h
Moudles/Paint2D/: Content2D.cpp  Content2D.h  LeftFloatingBar.cpp  LeftFloatingBar.h
Qss/: main.qss  main_titlebar.qss
Qss/Paint2D/: LeftBar.qss
